Hamburger Menu Fix and alignment

--- a/css/style.css
+++ b/css/style.css
@@ -44,20 +44,37 @@ iframe {
 }
 
 .nav-item {
-    padding-left: 30px;
+    margin-left: 30px;
+    text-align: center;
 
-    @media screen and (min-width: 1200px) {
+
+    @media screen and (max-width: 1200px) {
         padding-left: 30px;
+        margin-left: -3px;
     }
 
     @media screen and (min-width:992px) {
-        padding-left: 15px;
+        margin-right: -15px;
+        padding-right: 5px;
+    }
+
+    @media screen and (max-width:992px) {
+        text-align: start;
+        margin-left: -100px;
+        word-spacing: 3px;
+        letter-spacing: 3px;
     }
 }
 
 .nav-link:hover,
 .nav-link:focus {
     color: orangered !important;
+}
+
+.navbar-nav {
+    @media screen and (max-width:992px) {
+        margin-top: 90px;
+    }
 }
 
 .btn {
@@ -73,21 +90,46 @@ iframe {
     }
 }
 
+.hovercont {
+    @media screen and (max-width:992px) {
+        padding-right: 15px;
+        margin-left: 10px;
+    }
+}
+
 .btn:hover {
     background-color: rgb(237, 33, 33);
     border-color: transparent;
 }
 
+.dropdown-menu {
+    margin-right: 50px;
+}
+
 .navbar-collapse {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    overflow: visible;
     transform: translateX(-50px);
 
-    @media screen and (min-width:992px) {
-        overflow: visible;
+    @media screen and (max-width:992px) {
+        position: fixed;
+        top: 0%;
+        background-color: whitesmoke !important;
+        right: -10%;
+        width: 80%;
+        height: 100%;
+        transform: translateX(100%);
+        transition: transform 0.3s ease;
     }
+}
+
+.navbar-toggler {
+    @media screen and (max-width:992px) {
+        z-index: 1000;
+    }
+}
+
+.navbar-collapse.show {
+    transform: translateX(-10%);
 }
 
 #caps,
@@ -182,6 +224,10 @@ iframe {
 
 .btns {
     margin-left: 0px;
+
+    @media screen and (max-width:992px) {
+        text-align: center;
+    }
 }
 
 .opts button {
